Whitespace fixes and Snow Leopard text fix

--- a/views/stylesheets/global.less
+++ b/views/stylesheets/global.less
@@ -33,12 +33,12 @@ textarea {
 
 blockquote, 
 q {
-	position: relative;
+  position: relative;
   quotes: "\201C" "\201D";
 
   :before,
   :after {
-		content: none;
+    content: none;
   }
 }
 
@@ -81,6 +81,7 @@ body {
   padding: @lh * 2;
   text-align: left;
 	text-shadow: rgba(0, 0, 0, .1) 0 0 1px;
+	-webkit-text-stroke: 1px transparent;
 }
 
 a {
